TestNoteDao: sorting in comparison methods